# PhyBin

./: .gitignore  .travis.yml  DEVLOG.md  Dockerfile  Main.hs  Makefile  README.md  README.txt  Setup.hs  TestAll.hs  Version.hs  phybin.cabal  point_check.sh  stack.yaml  stripTable.hs  vary_branchlen.sh
Bio/Phylogeny/: PhyBin.hs
Bio/Phylogeny/PhyBin/: Binning.hs  CoreTypes.hs  Main.hs  Parser.hs  PreProcessor.hs  RFDistance.hs  Util.hs  Visualize.hs
old_script/: find_tree_matches.ss  parser2.ss  parser_fullnames.ss
src/Bio/Phylogeny/: PhyBin.hs
src/Bio/Phylogeny/PhyBin/: CoreTypes.hs  PreProcessor.hs  RFDistance.hs  Util.hs  Visualize.hs
tests/t1/: 112.tr  13.tr
tests/t2/: 116.tr  233.tr
tests/t30_mismatched/: mismatched.tr
tests/t3_consensus/: cluster1_215_alltrees.tr  cluster1_215_consensus.tr  cluster1_284_alltrees.tr  cluster1_284_consensus.tr
tests/t4_consensus/: cluster1_16_alltrees.tr  cluster1_16_consensus.tr  cluster1_6_alltrees.tr  cluster1_6_consensus.tr
tests/t5_consensus/: cluster1_11_alltrees.tr  cluster1_11_consensus.tr  cluster1_35_alltrees.tr  cluster1_35_consensus.tr
website/: index.html
