Name:           phybin
Version:        0.1.2.5
License: BSD3
License-file:   LICENSE
Stability: Beta
Author:			Ryan Newton <rrnewton@gmail.com>
Maintainer:		Ryan Newton <rrnewton@gmail.com>


-- Version history:
-- 0.1.2   -- first significant release
-- 0.1.2.1 -- 
-- 0.1.2.4 -- new release, several new features
-- 0.1.2.5 -- bump for graphviz API changes

-- homepage: http://code.haskell.org/phybin
homepage: http://people.csail.mit.edu/newton/phybin/

Copyright: Copyright (c) 2010 Ryan Newton
Synopsis: Utility for binning phylogenetic trees in Newick format.
Description: 
   Classifies (bins) input Newick trees by topology, creating output files that 
   characterize the size and contents of each bin (including
   generating GraphViz-based visual representations of the tree topologies).

Category: Bioinformatics
Cabal-Version: >=1.6

build-type: Simple

source-repository head
  type:     git
  location: git://github.com/rrnewton/PhyBin.git

Executable phybin
  Main-is:           Main.hs
  Build-Depends:     base >= 3 && < 5, directory, process, containers, unix, 
--                     stringtable-atom, 
                     filepath, 
                     -- graphviz == 2999.11.0.0,
                     -- graphviz >= 2999.12,
                     graphviz >= 2999.16, -- More API Changes. [2013.07.19]
                     text >= 0.11 && < 0.12,
                     prettyclass, fgl,
                     HSH, HUnit, bytestring, 
                     -- For bytestring.lazy support:
                     parsec >= 3.1.0, 
                     lattice-par, bitvec >= 0.1, vector >= 0.10

--  extensions: CPP
--   extensions: ScopedTypeVariables, RecordWildCards, TypeSynonymInstances
  GHC-Options: -O2 -funbox-strict-fields
--  GHC-Options: -O2 -threaded 

-- Doesn't work for an executable?
--  extra-source-files: README.txt

-- Oh, well this doesn't seem right but it achieves the effect for now:
--  c-sources: README.txt
--  includes: README.txt

